deploy/auth-policy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-policy
  labels:
    app.kubernetes.io/part-of: falco-ctf
