deploy/auth-policy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-policy
  namespace: auth-policy
  labels:
    app.kubernetes.io/name: auth-policy
    app.kubernetes.io/part-of: falco-ctf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-policy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-policy
        app.kubernetes.io/part-of: falco-ctf
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: auth-policy
          image: docker.io/falco-ctf/auth-policy
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits:   { cpu: 200m, memory: 128Mi }
