deploy/auth-policy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-policy
  namespace: auth-policy
  labels:
    app.kubernetes.io/name: auth-policy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-policy
  ports:
    - name: http
      port: 80
      targetPort: 8000
